--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "fs": "0.0.1-security",
-    "snoowrap": "^1.15.2"
+    "snoowrap": "^1.15.2",
+    "ws": ">=3.3.1"
   }
 }
